--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,9 @@
     cursor: pointer;
   }
 }
+.hidden {
+  display: none;
+}
 //
 // HEADER
 //
@@ -51,17 +54,37 @@
           width: 100%;
           height: 2px;
           background-color: #ff0000;
-          bottom: 30px;
+          bottom: 35px;
           left: 0;
           transform-origin: left;
           transform: scaleX(0);
           transition: 0.4s;
         }
-
         &:hover {
           &::after {
             transform: scaleX(1);
           }
+        }
+        a {
+          color: #52575c;
+        }
+      }
+      .active {
+        font-family: system-ui;
+        font-size: 18px;
+        font-stretch: expanded;
+        font-weight: 600;
+        transition: all linear 0.35s;
+        position: relative;
+        //
+        &::after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          background-color: #ff0000;
+          bottom: 35px;
+          left: 0;
         }
         a {
           color: #52575c;
@@ -181,7 +204,6 @@
     }
   }
 }
-
 //
 //slider
 //
@@ -273,9 +295,10 @@
 .service {
   width: 100%;
   font-family: sans-serif;
+  margin: 50px 0;
   &_container {
     width: 60%;
-    margin: 2% auto 3%;
+    margin: 0 auto;
     display: flex;
 
     &_item {
@@ -326,7 +349,6 @@
           font-weight: 600;
           font-size: 14px;
           line-height: 14px;
-          // transition: all linear 0.15s;
           &:hover {
             background-color: #bc0c19;
           }
@@ -401,7 +423,6 @@
     }
   }
 }
-
 //
 //product
 //
@@ -456,7 +477,6 @@
     }
   }
 }
-
 //
 //kocurmeler
 //
@@ -467,17 +487,17 @@
     width: 56%;
     margin: 0 auto;
     font-family: sans-serif;
-    .title{
+    .title {
       font-size: 48px;
       line-height: 64px;
       font-weight: 700;
       padding-bottom: 20px;
     }
-    p{
+    p {
       margin: 60px 10px;
       font-size: 12px;
-      opacity: .7;
-      i{
+      opacity: 0.7;
+      i {
         font-size: 10px;
         margin: 0 15px;
       }
@@ -491,22 +511,602 @@
       display: flex;
       border-radius: 5px;
       align-items: center;
-      &:hover{
+      &:hover {
         background-color: #f3f3f5;
       }
-      img{
+      img {
         margin: 0 10px;
       }
-      span{
+      span {
         width: 100%;
         display: flex;
         justify-content: space-between;
         font-size: 16px;
-        i{
-        opacity: .7;
+        i {
+          opacity: 0.7;
         }
-
       }
     }
   }
+}
+//
+//cards
+//
+.cards {
+  width: 100%;
+  margin: 50px 0;
+  .reklam {
+    width: 100%;
+
+    .title {
+      font-size: 45px;
+      color: #bc0c19;
+    }
+    &_cards {
+      width: 60%;
+      margin: 0 auto;
+      &_type {
+        background-image: url(https://img5.goodfon.com/wallpaper/nbig/d/90/fon-wallpaper-lines-abstract.jpg);
+
+        .top {
+          display: flex;
+          font-family: sans-serif;
+          color: #fff;
+
+          .left {
+            display: flex;
+            flex-direction: column;
+            row-gap: 25px;
+            padding: 76px 40px 50px;
+
+            h1 {
+              font-size: 25px;
+              font-family: sans-serif;
+              font-weight: 400;
+            }
+            p {
+              font-size: 16px;
+              font-family: sans-serif;
+            }
+            .answer {
+              padding: 10px 0;
+              font-weight: 700;
+              color: #000;
+            }
+          }
+          .btn {
+            width: 150px;
+            border: none;
+            background-color: #ec3342;
+            color: #fff;
+            border-radius: 8px;
+            font-weight: 600;
+            padding: 10px 40px;
+            font-size: 16px;
+            margin-top: 24px;
+            min-height: 51px;
+            &:hover {
+              background-color: #bc0c19;
+            }
+          }
+
+          .right {
+            padding: 40px 35px 77px 25px;
+          }
+        }
+      }
+    }
+  }
+  .buttons {
+    text-align: center;
+    margin: 0 auto;
+    button {
+      margin: 35px 0;
+      width: 120px;
+      height: 43px;
+      background-color: #e7e8ea;
+      border: none;
+      border-radius: 6px;
+      font-weight: 700;
+      font-family: sans-serif;
+      font-size: 15px;
+      &:hover {
+        background-color: #757575;
+        color: #fff;
+      }
+    }
+  }
+  .cards_container {
+    margin: 0 auto;
+    row-gap: 25px;
+    width: 60%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    &_item {
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      border-radius: 7px;
+      background-image: url(https://img5.goodfon.com/wallpaper/nbig/d/90/fon-wallpaper-lines-abstract.jpg);
+      width: 350px;
+      height: 500px;
+      position: relative;
+      img {
+        width: 150px;
+        margin: 0 auto;
+        padding-top: 20px;
+      }
+      .text {
+        display: flex;
+        flex-direction: column;
+        row-gap: 25px;
+        font-family: sans-serif;
+        margin: 30px 0 0 25px;
+        h2 {
+          font-size: 25px;
+        }
+        p {
+          font-size: 15px;
+        }
+        h2,
+        p {
+          color: #fff;
+        }
+        button {
+          bottom: 20px;
+          position: absolute;
+          height: 40px;
+          padding: 0px 30px;
+          width: max-content;
+          background-color: #ec3342;
+          border: 1px solid #ec3342;
+          border-radius: 36px;
+          color: #fff;
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 14px;
+          &:hover {
+            background-color: #bc0c19;
+          }
+        }
+      }
+    }
+  }
+  .security{
+    width: 60%;
+    display: flex;
+    margin: 50px auto;
+    column-gap: 30px;
+    &_item{
+      background-color: #f9f9fa;
+      text-align: center;
+      width: 335px;
+      height: 165px;
+      padding: 0 20px;
+      img{
+        width: 55px;
+        height: 50px;
+        margin: 15px auto;
+      }
+      h1{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+        font-size: 20px;
+        font-family: sans-serif;
+      }
+      button{
+        margin-top: 13px;
+        background-color: transparent;
+        border: 1px solid #caccd0;
+        color: #2e3131;
+        padding: 7px 25px;
+        border-radius: 6px;
+        float: right;
+        font-size: 12px;
+        font-weight: 600;
+        text-decoration: none;
+        &:hover{
+          color: #fff;
+          background-color: #2e3131;
+        }
+      }
+    }
+  }
+}
+//
+//loan
+//
+.loan {
+  width: 100%;
+  &_container {
+    width: 60%;
+    margin: 0 auto;
+    &_contain {
+      width: 97%;
+
+      .top {
+        display: flex;
+        font-family: sans-serif;
+        color: #fff;
+        background-image: url(https://img5.goodfon.com/wallpaper/nbig/d/90/fon-wallpaper-lines-abstract.jpg);
+
+        .left {
+          display: flex;
+          flex-direction: column;
+          row-gap: 25px;
+          padding: 76px 40px 50px;
+
+          h1 {
+            font-size: 36px;
+            font-family: sans-serif;
+            font-weight: 400;
+            span {
+              color: #ec3342;
+            }
+          }
+          p {
+            font-size: 16px;
+            font-family: sans-serif;
+          }
+        }
+        .right {
+          padding-top: 76px;
+        }
+        .answer {
+          padding: 10px 0;
+          font-weight: 700;
+          color: #000;
+        }
+      }
+      .bottom {
+        text-align: center;
+        background-color: #e7e8ea;
+        .telinp {
+          border-radius: 17px;
+          width: 240px;
+          padding: 15px;
+          height: 50px;
+          font-size: 20px;
+          border: none;
+          box-shadow: 0px 1px 3px 0px;
+          outline: none;
+        }
+      }
+    }
+    &_bottom {
+      font-family: sans-serif;
+      h1 {
+        margin-bottom: 30px;
+      }
+      p {
+        background-color: #e8ecf1;
+        padding: 20px 3px 20px 41px;
+      }
+      .list {
+        li {
+          list-style: disc;
+          padding: 30px 3px 0 41px;
+          font-size: 16px;
+        }
+        display: flex;
+        background-color: #f9f9fa;
+        justify-content: space-between;
+        padding-bottom: 45px;
+        .left {
+          width: 45%;
+        }
+        .right {
+          width: 45%;
+        }
+      }
+    }
+  }
+}
+//
+//odenisler
+//
+.odenisler {
+  background-color: #f0f0f090;
+  width: 100%;
+  padding: 40px 0;
+  .title {
+    width: 40%;
+    text-align: center;
+    font-size: 35px;
+    font-family: sans-serif;
+    font-weight: 100;
+    margin: 40px 0;
+  }
+  .icon_container {
+    margin: 0 auto;
+    flex-wrap: wrap;
+    display: flex;
+    row-gap: 30px;
+    column-gap: 30px;
+    width: 66%;
+    .icons {
+      display: flex;
+      flex-direction: column;
+      button {
+        background-color: #fff;
+        width: 290px;
+        height: 175px;
+        border: none;
+        &:hover {
+          box-shadow: 0 1rem 1.5rem rgba(6, 30, 45, 0.09);
+        }
+      }
+      i {
+        font-size: 40px;
+        color: #ec3342;
+      }
+      p {
+        font-size: 17px;
+        margin: 15px 0;
+      }
+    }
+  }
+}
+//
+//partnyorlar
+//
+.partnyorlar {
+  a {
+    color: #000;
+  }
+  width: 100%;
+  &_container {
+    margin: 0 auto;
+    width: 60%;
+    .header {
+      width: 100%;
+    }
+    .filter {
+      width: 100%;
+    }
+    .items {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 20px;
+      row-gap: 20px;
+
+      .item {
+        width: 270px;
+        height: 280px;
+        box-shadow: 0 0 5px #0000001a;
+        &:hover {
+          box-shadow: 0 1px 4px #00000065;
+          img {
+            transition: all 0.35s;
+
+            scale: 1.05;
+          }
+        }
+        .foto {
+          padding-top: 15px;
+          text-align: center;
+          overflow: hidden;
+        }
+        .text {
+          margin: 25px 20px;
+          display: flex;
+          flex-direction: column;
+          row-gap: 10px;
+          font-family: sans-serif;
+          h1 {
+            font-size: 18px;
+          }
+          p {
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+//
+//partnyorname
+//
+.partnyorname {
+  font-family: sans-serif;
+  width: 100%;
+  .partnyor_container {
+    background-color: #f9f9f9;
+    width: 60%;
+    margin: 0 auto;
+    &_top {
+      padding: 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .left {
+        align-items: center;
+        display: flex;
+        column-gap: 30px;
+        .pic {
+          img {
+            width: auto;
+            height: 80px;
+          }
+        }
+        .text {
+          display: flex;
+          flex-direction: column;
+          row-gap: 10px;
+        }
+      }
+      .right {
+        .social_icons {
+          i {
+            margin: 0 10px;
+            font-size: 35px;
+            color: #bc0c19;
+          }
+        }
+      }
+    }
+
+    &_bottom {
+      .item{
+        display: flex;
+        flex-direction: column;
+        row-gap: 15px;
+        padding: 15px;
+        i{
+          color: #bc0c19;
+          margin-right: 7px;
+        }
+        .contact{
+          width: 40%;
+          display: flex;
+          justify-content: space-between;
+        }
+        span{
+          opacity: .7;
+        }
+      }
+
+    }
+  }
+}
+
+// .actives {
+//   background-color: #757575;
+//   color:#fff;
+// }
+// .taksit{
+//   color: red;
+// }
+.cardid{
+  .reklam{
+    row-gap: 25px;
+   width: 100%;
+    h1{
+      font-weight: 100;
+    }
+      &_container {
+    width: 60%;
+    margin: 0 auto;
+    &_contain {
+      width: 97%;
+
+      .top {
+        display: flex;
+        justify-content: space-between;
+        font-family: sans-serif;
+        color: #fff;
+        background-image: url(https://img5.goodfon.com/wallpaper/nbig/d/90/fon-wallpaper-lines-abstract.jpg);
+
+        .left {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          row-gap: 25px;
+          padding: 46px 40px 50px;
+
+          h1 {
+            font-size: 36px;
+            font-family: sans-serif;
+            font-weight: 400;
+            span {
+              color: #ec3342;
+            }
+          }
+          p {
+            font-size: 16px;
+            font-family: sans-serif;
+          }
+          .answer {
+            padding: 10px 0;
+            font-weight: 700;
+            color: #000;
+          }
+        }
+        .right {
+          width: 30%;
+          padding: 40px 40px;
+          img{
+            width: 180px;
+            height: 285px;
+          }
+        }
+      }
+      .bottom {
+        text-align: center;
+        background-color: #e7e8ea;
+        .telinp {
+          border-radius: 17px;
+          width: 240px;
+          padding: 15px;
+          height: 50px;
+          font-size: 20px;
+          border: none;
+          box-shadow: 0px 1px 3px 0px;
+          outline: none;
+        }
+      }
+    }
+    &_bottom {
+      font-family: sans-serif;
+      h1 {
+        margin-bottom: 30px;
+      }
+      p {
+        background-color: #e8ecf1;
+        padding: 20px 3px 20px 41px;
+      }
+      .list {
+        li {
+          list-style: disc;
+          padding: 30px 3px 0 41px;
+          font-size: 16px;
+        }
+        display: flex;
+        background-color: #f9f9fa;
+        justify-content: space-between;
+        padding-bottom: 45px;
+        .left {
+          width: 45%;
+        }
+        .right {
+          width: 45%;
+        }
+      }
+    }
+  }
+  }
+  .text{
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    row-gap: 25px;
+    width: 60%;
+    margin: 0 auto;
+    .mil{
+      display: flex;
+    width: 90%;
+    justify-content: space-between;
+    .lost{
+      margin-bottom: 15px;
+    }
+    .left{
+      width: 75%;
+    }
+    .right{
+      width: 40%;
+    }
+    }
+    p{
+      width: 75%;
+    }
+    .list{
+      width: 75%;
+      list-style:disc;
+    }
+  }
+
 }
